[GUI] Move icons/dark mode text fixes

--- a/src/qt/sss/res/css/style_dark.css
+++ b/src/qt/sss/res/css/style_dark.css
@@ -995,7 +995,7 @@ HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH*/
 }
 
 *[cssClass="text-title-dialog"] {
-    color:#5c4b7d;
+    color:#007bfe;
     font-size:22px;
 }
 
